Add PHP 8.0 compatibility, fix iterating JSArray
Due to the usage of each() in JSArray::valid() the internal array pointer would be advanced every time valid was called.
This resulted in every odd element to be skipped (e.g. 1st, 3rd, 5th...) when iterating.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        php-versions: ['7.3', '7.4']
+        php-versions: ['7.3', '7.4', '8.0', '8.1']
 
     runs-on: ubuntu-latest
 
